# Hypothesis3Analysis

./: .gitignore  AnalisisV3.ipynb  AnalisisV4.py  AnalisisV5.py  AnalisisV5FilterClients.py  README.md  RollUpFilterClients.py  main.py  pyproject.toml
data/: rollup_canibalizacion_postprocesamiento.sql
docs/: data_schema.md
